--- a/InclassActivities/inclass_activity.html
+++ b/InclassActivities/inclass_activity.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<tr><td><a href="#MainTitle">Main Page | </a></td><td><a href="#Menu">Menu | </a></td><td><a href="#Music">Music | </a></td></td><td><a href="#Location">Location | </a></td></tr>
+<tr><td><a href="#MainTitle">Main Title | </a></td><td><a href="#Menu">Menu | </a></td><td><a href="#Music">Music | </a></td></td><td><a href="#Location">Location | </a></td></tr>
 </br>
 <img src="java4.gif" width="500" height="200">
 
