--- a/InclassActivities/inclass_activity.html
+++ b/InclassActivities/inclass_activity.html
@@ -59,8 +59,8 @@
 <p>JavaJam is located at 8544 University City Blvd
 Charlotte, NC 28213. See <a href="http://maps.google.com">Google Maps</a> for directions.</p>
 
-<p>Copyright &copy; JavaJam Coffee House<br>
-manager@javajam.com</p>
+<p><em> &copy; JavaJam Coffee House<br>
+manager@javajam.com</em></p>
 
 <a href="http://validator.w3.org/check?uri=referer">Validate</a> 
 
