--- a/Project_1/Store/store.html
+++ b/Project_1/Store/store.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header" id="header">
         <div class="logo">
-            <img src="../Assets/Logo.png"  alt="Logo"/>
+            <img src="Bpasazade.github.io/Project_1/Assets/Logo.png"  alt="Logo"/>
         </div>
         <div class="title">
             <h1>Intelligent Orb</h1>
