--- a/Project_1/index2.html
+++ b/Project_1/index2.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header" id="header">
         <div class="logo">
-            <img src="/Assets/Logo.png"  alt="Logo"/>
+            <img src="../../../Assets/Logo.png"  alt="Logo"/>
         </div>
         <div class="name">
             <h1>Intelligent Orb</h1>
