--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -18,9 +18,9 @@
 
     <div class="nav-bar">
         <a href="/index.html" id="current">Home</a>
-        <a href="Project_1/Store/store.html">Store</a>
-        <a href="Project_1/Community/community.html">Community</a>
-        <a href="Project_1/About/about.html">About</a>              
+        <a href="./Store/store.html">Store</a>
+        <a href="./Community/community.html">Community</a>
+        <a href="./About/about.html">About</a>              
     </div>
 
     <div class="outer-slidebox">
