--- a/Project_1/Store/store.html
+++ b/Project_1/Store/store.html
@@ -17,10 +17,10 @@
     </div>
 
     <div class="nav-bar">
-        <a href="/index.html">Home</a>
-        <a href="/Store/Store" id="current">Store</a>
-        <a href="/Community/Community.html">Community</a>
-        <a href="/About/About.html">About</a>               
+        <a href="./index.html">Home</a>
+        <a href="../Store/Store" id="current">Store</a>
+        <a href="../Community/Community.html">Community</a>
+        <a href="../About/About.html">About</a>               
     </div>
 
     <h1 class="page-title">Store</h1>
@@ -69,7 +69,7 @@
                     <tr>
                         <td>
                             <div class="game-card">
-                                <div class="cover"><img src="/Assets/cod_mw2.jpg" alt="Avatar" id="card-cover"></div>
+                                <div class="cover"><img src="../Assets/cod_mw2.jpg" alt="Avatar" id="card-cover"></div>
                                 <div class="container">
                                 <h4><b>Call of Duty: MWII</b></h4>
                                 <div class="price_buy">
@@ -81,7 +81,7 @@
                         </td>
                         <td>
                             <div class="game-card">
-                                <div class="cover"><img src="/Assets/diablo_IV.png" alt="Avatar" id="card-cover"></div>
+                                <div class="cover"><img src="../Assets/diablo_IV.png" alt="Avatar" id="card-cover"></div>
                                 <div class="container">
                                 <h4><b>Diablo IV</b></h4>
                                 <div class="price_buy">
@@ -93,7 +93,7 @@
                         </td>
                         <td>
                             <div class="game-card">
-                                <div class="cover"><img src="/Assets/hs.jpg" alt="Avatar" id="card-cover"></div>
+                                <div class="cover"><img src="../Assets/hs.jpg" alt="Avatar" id="card-cover"></div>
                                 <div class="container">
                                 <h4><b>Hearthstone</b></h4>
                                 <div class="price_buy">
@@ -105,7 +105,7 @@
                         </td>
                         <td>
                             <div class="game-card">
-                                <div class="cover"><img src="/Assets/re_4.jpg" alt="Avatar" id="card-cover"></div>
+                                <div class="cover"><img src="../Assets/re_4.jpg" alt="Avatar" id="card-cover"></div>
                                 <div class="container">
                                 <h4><b>Resident Evil 4</b></h4>
                                 <div class="price_buy">
@@ -117,7 +117,7 @@
                         </td>
                         <td>
                             <div class="game-card">
-                                <div class="cover"><img src="/Assets/limbo.jpg" alt="Avatar" id="card-cover"></div>
+                                <div class="cover"><img src="../Assets/limbo.jpg" alt="Avatar" id="card-cover"></div>
                                 <div class="container">
                                     <h4><b>LIMBO</b></h4>
                                     <div class="price_buy">
@@ -131,7 +131,7 @@
                     <tr>
                         <td>
                             <div class="game-card">
-                                <div class="cover"><img src="/Assets/do_2.jpg" alt="Avatar" id="card-cover"></div>
+                                <div class="cover"><img src="../Assets/do_2.jpg" alt="Avatar" id="card-cover"></div>
                                 <div class="container">
                                 <h4><b>Divinity 2: Original Sin</b></h4>
                                 <div class="price_buy">
@@ -143,7 +143,7 @@
                         </td>
                         <td>
                             <div class="game-card">
-                                <div class="cover"><img src="/Assets/dota_2.jpg" alt="Avatar" id="card-cover"></div>
+                                <div class="cover"><img src="../Assets/dota_2.jpg" alt="Avatar" id="card-cover"></div>
                                 <div class="container">
                                 <h4><b>Dota 2</b></h4>
                                 <div class="price_buy">
@@ -155,7 +155,7 @@
                         </td>
                         <td>
                             <div class="game-card">
-                                <div class="cover"><img src="/Assets/sbf_2.jpeg" alt="Avatar" id="card-cover"></div>
+                                <div class="cover"><img src="../Assets/sbf_2.jpeg" alt="Avatar" id="card-cover"></div>
                                 <div class="container">
                                 <h4><b>Star Wars: Battle Front II</b></h4>
                                 <div class="price_buy">
@@ -167,7 +167,7 @@
                         </td>
                         <td>
                             <div class="game-card">
-                                <div class="cover"><img src="/Assets/hk.webp" alt="Avatar" id="card-cover"></div>
+                                <div class="cover"><img src="../Assets/hk.webp" alt="Avatar" id="card-cover"></div>
                                 <div class="container">
                                 <h4><b>Hollow Knight</b></h4>
                                 <div class="price_buy">
@@ -179,7 +179,7 @@
                         </td>
                         <td>
                             <div class="game-card">
-                                <div class="cover"><img src="/Assets/hades.webp" alt="Avatar" id="card-cover"></div>  
+                                <div class="cover"><img src="../Assets/hades.webp" alt="Avatar" id="card-cover"></div>  
                                 <div class="container">
                                     <h4><b>Hades</b></h4>
                                     <div class="price_buy">
@@ -204,14 +204,14 @@
     <div class="footer">
         <div class="f1">
             <button class="twitter-button">
-                <img src="/Assets/twitter_logo.png"  alt="Twitter Logo" id="twitter_logo"/>
+                <img src="../Assets/twitter_logo.png"  alt="Twitter Logo" id="twitter_logo"/>
             </button>
             <button class="instagram-button">
-                <img src="/Assets/instagram_logo.png"  alt="Instagram Logo" id="instagram_logo"/>
+                <img src="../Assets/instagram_logo.png"  alt="Instagram Logo" id="instagram_logo"/>
             </button>
             <button class="up">
                 <a href="#">
-                    <img src="/Assets/up.png" alt="Up Arrow" id="up_arrow"/>
+                    <img src="../Assets/up.png" alt="Up Arrow" id="up_arrow"/>
                 </a>
             </button>
         </div>
