--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -3,13 +3,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../Home/home.css">
+    <link rel="stylesheet" type="text/css" href="./Home/home.css">
     <title>Home</title>
 </head>
 <body>
     <div class="header" id="header">
         <div class="logo">
-            <img src="../Assets/Logo.png"  alt="Logo"/>
+            <img src="./Assets/Logo.png"  alt="Logo"/>
         </div>
         <div class="name">
             <h1>Intelligent Orb</h1>
@@ -41,7 +41,7 @@
             <li>
                 <article class="news">
                     <div class="news-img">
-                        <img src="/Assets/News/elden_ring.avif" alt="News1" id="news-cover">
+                        <img src="./Assets/News/elden_ring.avif" alt="News1" id="news-cover">
                     </div>
                     <div class="news-text">
                         <h3>Elden Ring Fan Puts Together Complete Timeline Of All Its Wars</h3>
@@ -54,7 +54,7 @@
             <li>
                 <article class="news">
                     <div class="news-img">
-                        <img src="/Assets/News/tlou.avif" alt="News2" id="news-cover">
+                        <img src="./Assets/News/tlou.avif" alt="News2" id="news-cover">
                     </div>
                     <div class="news-text">
                         <h3>The Last Of Us Part 1's PC Port Is Facing Complaints Over Constant Crashes</h3>
@@ -68,7 +68,7 @@
             <li>
                 <article class="news">
                     <div class="news-img">
-                        <img src="/Assets/News/lilith.jpg" alt="News3" id="news-cover">
+                        <img src="./Assets/News/lilith.jpg" alt="News3" id="news-cover">
                     </div>
                     <div class="news-text">
                         <h3>Here's The Full 'Diablo 4' Map, With The Beta Zone For Reference</h3>
@@ -83,7 +83,7 @@
             <li>
                 <article class="news">
                     <div class="news-img">
-                        <img src="/Assets/News/resident-evil-4.avif" alt="News4" id="news-cover">
+                        <img src="./Assets/News/resident-evil-4.avif" alt="News4" id="news-cover">
                     </div>
                     <div class="news-text">
                         <h3>Resident Evil 4 Sells Tremendously Well in Its First Two Days</h3>
@@ -105,14 +105,14 @@
     <div class="footer">
         <div class="f1">
             <button class="twitter-button">
-                <img src="/Assets/twitter_logo.png"  alt="Twitter Logo" id="twitter_logo"/>
+                <img src="./Assets/twitter_logo.png"  alt="Twitter Logo" id="twitter_logo"/>
             </button>
             <button class="instagram-button">
-                <img src="/Assets/instagram_logo.png"  alt="Instagram Logo" id="instagram_logo"/>
+                <img src="./Assets/instagram_logo.png"  alt="Instagram Logo" id="instagram_logo"/>
             </button>
             <button class="up">
                 <a href="#">
-                    <img src="/Assets/up.png" alt="Up Arrow" id="up_arrow"/>
+                    <img src="./Assets/up.png" alt="Up Arrow" id="up_arrow"/>
                 </a>
             </button>
         </div>
