--- a/Project_1/Store/store.html
+++ b/Project_1/Store/store.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="nav-bar">
-        <a href="./index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="../Store/Store" id="current">Store</a>
         <a href="../Community/Community.html">Community</a>
         <a href="../About/About.html">About</a>               
