--- a/Project_1/About/about.html
+++ b/Project_1/About/about.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header" id="header">
         <div class="logo">
-            <img src="/Assets/Logo.png"  alt="Logo"/>
+            <img src="../Assets/Logo.png"  alt="Logo"/>
         </div>
         <div class="name">
             <h1>Intelligent Orb</h1>
@@ -17,10 +17,10 @@
     </div>
 
     <div class="nav-bar">
-        <a href="/index.html">Home</a>
-        <a href="/Store/store.html">Store</a>
-        <a href="/Community/community.html">Community</a>
-        <a href="/About/about.html" id="current">About</a>              
+        <a href="../index.html">Home</a>
+        <a href="../Store/store.html">Store</a>
+        <a href="../Community/community.html">Community</a>
+        <a href="../About/about.html" id="current">About</a>              
     </div>
 
     <h1 class="page-title">About</h1>
@@ -33,21 +33,21 @@
             The service is the largest digital distribution platform for PC gaming, estimated around 75% of the market share in 2013 according to IHS Screen Digest. By 2017, users purchasing games through Steam totaled approximately US$4.3 billion, representing at least 18% of global PC game sales according to Steam Spy.[3] By 2021, the service had over 34,000 games with over 132 million monthly active users.[4] The success of Steam has led to the development of the Steam Machine line of gaming PCs in 2015, which includes the XOS operating system and Steam Controller, X Link devices for local game streaming, and the handheld Steam Deck tailored for running Steam games in 2022.</p>
     
         <div>
-            <img src="/Assets/about.webp"  alt="About" id="about_img"/>
+            <img src="../Assets/about.webp"  alt="About" id="about_img"/>
         </div>
         </div>
             
     <div class="footer">
         <div class="f1">
             <button class="twitter-button">
-                <img src="/Assets/twitter_logo.png"  alt="Twitter Logo" id="twitter_logo"/>
+                <img src="../Assets/twitter_logo.png"  alt="Twitter Logo" id="twitter_logo"/>
             </button>
             <button class="instagram-button">
-                <img src="/Assets/instagram_logo.png"  alt="Instagram Logo" id="instagram_logo"/>
+                <img src="../Assets/instagram_logo.png"  alt="Instagram Logo" id="instagram_logo"/>
             </button>
             <button class="up">
                 <a href="#">
-                    <img src="/Assets/up.png" alt="Up Arrow" id="up_arrow"/>
+                    <img src="../Assets/up.png" alt="Up Arrow" id="up_arrow"/>
                 </a>
             </button>
         </div>
