--- a/Project_1/Community/community.html
+++ b/Project_1/Community/community.html
@@ -61,7 +61,7 @@
                                     <div><img src="../Assets/abaddon_pp.png" alt="Dota 2" id="pp"/></div>
                                     <h4>B.pasazade</h4>
                                     <div class="about_game">
-                                        <div class="rp_row_img"><img src="/Assets/Icons/dota_2.jpg" id="rp_icon"></div>
+                                        <div class="rp_row_img"><img src="../Assets/Icons/dota_2.jpg" id="rp_icon"></div>
                                         <p id="game_about">Dota 2</p>
                                     </div>
                                 </div>
@@ -90,7 +90,7 @@
                                     <div><img src="../Assets/abaddon_pp.png" alt="Dota 2" id="pp"/></div>
                                     <h4>B.pasazade</h4>
                                     <div class="about_game">
-                                        <div class="rp_row_img"><img src="/Assets/Icons/MWII.jpg" id="rp_icon"></div>
+                                        <div class="rp_row_img"><img src="../Assets/Icons/MWII.jpg" id="rp_icon"></div>
                                         <p id="game_about">Call of Duty: MWII</p>
                                     </div>
                                 </div>
@@ -122,7 +122,7 @@
                                     <div><img src="../Assets/abaddon_pp.png" alt="Dota 2" id="pp"/></div>
                                     <h4>B.pasazade</h4>
                                     <div class="about_game">
-                                        <div class="rp_row_img"><img src="/Assets/Icons/diablo_IV.webp" id="rp_icon"></div>
+                                        <div class="rp_row_img"><img src="../Assets/Icons/diablo_IV.webp" id="rp_icon"></div>
                                         <p id="game_about">diablo_IV</p>
                                     </div>
                                 </div>
@@ -151,7 +151,7 @@
                                     <div><img src="../Assets/abaddon_pp.png" alt="Dota 2" id="pp"/></div>
                                     <h4>B.pasazade</h4>
                                     <div class="about_game">
-                                        <div class="rp_row_img"><img src="/Assets/Icons/hs.png" id="rp_icon"></div>
+                                        <div class="rp_row_img"><img src="../Assets/Icons/hs.png" id="rp_icon"></div>
                                         <p id="game_about">Hearthstone</p>
                                     </div>
                                 </div>
