--- a/Project_1/Community/community.html
+++ b/Project_1/Community/community.html
@@ -19,7 +19,7 @@
     <div class="nav-bar">
         <a href="../index.html">Home</a>
         <a href="../Store/store.html">Store</a>
-        <a href="../Community/community.html" id="current">Community</a>
+        <a href="community.html" id="current">Community</a>
         <a href="../About/about.html">About</a>              
     </div>
 
