--- a/Project_1/About/about.html
+++ b/Project_1/About/about.html
@@ -20,7 +20,7 @@
         <a href="../index.html">Home</a>
         <a href="../Store/store.html">Store</a>
         <a href="../Community/community.html">Community</a>
-        <a href="../About/about.html" id="current">About</a>              
+        <a href="about.html" id="current">About</a>              
     </div>
 
     <h1 class="page-title">About</h1>
