--- a/Project_1/Store/store.html
+++ b/Project_1/Store/store.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="store.css">
-    <title>Story</title>
+    <title>Store</title>
 </head>
 <body>
     <div class="header" id="header">
@@ -18,7 +18,7 @@
 
     <div class="nav-bar">
         <a href="../index.html">Home</a>
-        <a href="../Store/Store" id="current">Store</a>
+        <a href="store.html" id="current">Store</a>
         <a href="../Community/Community.html">Community</a>
         <a href="../About/About.html">About</a>               
     </div>
