--- a/Project_1/Store/store.html
+++ b/Project_1/Store/store.html
@@ -19,8 +19,8 @@
     <div class="nav-bar">
         <a href="../index.html">Home</a>
         <a href="store.html" id="current">Store</a>
-        <a href="../Community/Community.html">Community</a>
-        <a href="../About/About.html">About</a>               
+        <a href="../Community/community.html">Community</a>
+        <a href="../About/about.html">About</a>               
     </div>
 
     <h1 class="page-title">Store</h1>
