--- a/Project_1/index.html
+++ b/Project_1/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="nav-bar">
-        <a href="/index.html" id="current">Home</a>
+        <a href="index.html" id="current">Home</a>
         <a href="./Store/store.html">Store</a>
         <a href="./Community/community.html">Community</a>
         <a href="./About/about.html">About</a>              
