--- a/InclassActivity_6/index.html
+++ b/InclassActivity_6/index.html
@@ -5,6 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inclass Activity 6</title>
+    <style>
+        #button{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            padding: 10px 15px;
+            font-size: 15px;
+            color: blue;
+            font-weight: bold;
+            border: 2px solid blue;
+            border-radius: 25px;
+            background-color: white;
+            cursor: pointer;
+        }
+        #button:hover{
+            background-color: blue;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <button id="button">Catch Me</button> 
