--- a/Project_3_4/Store/store.html
+++ b/Project_3_4/Store/store.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <link rel="stylesheet" type="text/css" href="store.css">
     <link rel="stylesheet" type="text/css" href="../nav-bar/nav-bar.css">
     <title>Store</title>
@@ -12,6 +13,7 @@
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="purchase_script.js"></script>
 
+    
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
